# f1-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  weekly.yml
data/models/: f1_winner_model.pkl  metrics.json
data/raw/: fp_pace.parquet  qualifying.parquet  results.parquet  schedule.parquet  standings.parquet  weather.parquet
scripts/: run_local.sh
src/f1_predictor/: __init__.py  __main__.py  compare.py  config.py  ergast_client.py  fastf1_client.py  features.py  ingest.py  predict.py  train.py  weekly.py
src/f1_predictor/web/: __init__.py  app.py
src/f1_predictor/web/static/: app.js  index.html  style.css
tests/: test_ergast_parsing.py  test_features.py
