[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-predictor"
version = "0.1.0"
description = "F1 race winner prediction pipeline using FastF1 + Ergast + XGBoost"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastf1>=3.4.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "python-dateutil>=2.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
f1-predictor = "f1_predictor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"f1_predictor.web" = ["static/*"]

[tool.ruff]
line-length = 110
target-version = "py310"
